:art: fix https://github.com/siyuan-note/siyuan/issues/7041

--- a/app/appearance/icons/index.html
+++ b/app/appearance/icons/index.html
@@ -36,6 +36,24 @@
     </div>
     <div>
         <svg>
+            <use xlink:href="#iconCloudOff"></use>
+        </svg>
+        iconCloudOff
+    </div>
+    <div>
+        <svg>
+            <use xlink:href="#iconCloudSync"></use>
+        </svg>
+        iconCloudSync
+    </div>
+    <div>
+        <svg>
+            <use xlink:href="#iconCloudError"></use>
+        </svg>
+        iconCloudError
+    </div>
+    <div>
+        <svg>
             <use xlink:href="#iconLiandi"></use>
         </svg>
         iconLiandi
@@ -971,6 +989,6 @@
         iconSub
     </div>
 </div>
-<script src="material/icon.js"></script>
+<script src="ant/icon.js"></script>
 </body>
 </html>
